force-app/main/default/objects/Doctor__c/Doctor__c.object-meta.xml
<CustomObject>
    <label>Doctor</label>
    <nameField>
        <displayFormat>DOCID - {00000}</displayFormat>
        <label>Doctor Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>