force-app/main/default/objects/Doctor__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>City_Global_PL</valueSetName>
    </valueSet>
</CustomField>