force-app/main/default/objects/Doctor__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>DMD/DDS</fullName>
            </value>
            <value>
                <fullName>DVM</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>PharmD</fullName>
            </value>
            <value>
                <fullName>DPT</fullName>
            </value>
            <value>
                <fullName>PsyD/PHD</fullName>
            </value>
            <value>
                <fullName>DNP</fullName>
            </value>
            <value>
                <fullName>DPM</fullName>
            </value>
            <value>
                <fullName>DrPH</fullName>
            </value>
            <value>
                <fullName>EDH</fullName>
            </value>
            <value>
                <fullName>DBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>