force-app/main/default/objects/Doctor__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Urologist</fullName>
            </value>
            <value>
                <fullName>Psychiatrist</fullName>
            </value>
            <value>
                <fullName>General surgery</fullName>
            </value>
            <value>
                <fullName>Dermatologist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>